Update to match a1846c35274769e172232565f3d2f4a3497496aa

--- a/index.html
+++ b/index.html
@@ -936,7 +936,7 @@ Find our <a href='#appel-a-demonstrateurs'>call for demonstrators</a>.
   <div class="col-12">
     <p>NumPEx is a PEPR (Programme et Équipement Prioritaire de Recherche) on the Exascale, financed by the <a href="https://www.economie.gouv.fr/france-2030#" target="_blank" rel="noopener">France2030</a> investment program.</p>
 <p>Acces the slides of NumPEx presented at the <a href="http://orap.irisa.fr/49ieme-forum-le-pepr-numpex/" target="_blank" rel="noopener">49th Orap Forum</a>.</p>
-<p>NumPEx has a gloabl budget of 41.8 million euros, and is made up of 5 target projects covering the complete spectrum of the Exascale software stack.</p>
+<p>NumPEx has a gloabl budget of 41.8 million euros, and is made up of 5 targeted projects covering the complete spectrum of the Exascale software stack.</p>
 
   </div>
 
@@ -1031,7 +1031,7 @@ Find our <a href='#appel-a-demonstrateurs'>call for demonstrators</a>.
 
 
   <div class="col-12">
-    <h1 id="a-idprojets-ciblesatarget-projects"><a id='projets-cibles'></a>Target Projects</h1>
+    <h1 id="a-idprojets-ciblesatargeted-projects"><a id='projets-cibles'></a>Targeted projects</h1>
 <div class="markmap" style="height: 15rem;">
 
 <pre>- NumPEx
@@ -1263,7 +1263,7 @@ Find our <a href='#appel-a-demonstrateurs'>call for demonstrators</a>.
 
 
   <div class="col-12">
-    <p>We will have a large number of openings, starting from September 2023, with the possibility of earlier dates. Each Target Project will publish calls for candidates.</p>
+    <p>We will have a large number of openings, starting from September 2023, with the possibility of earlier dates. Each targeted project will publish calls for candidates.</p>
 <ul>
 <li>
 <p>ExaMA</p>
@@ -1283,7 +1283,7 @@ Find our <a href='#appel-a-demonstrateurs'>call for demonstrators</a>.
 <li>we are seeking 11 candidates for our Compute and Data Team (CDT)</li>
 <li>the positions are for 2 to 5 years, with remuneration as a function of experience</li>
 <li>the profiles we seek begin from Postdoc level (directly after a PhD), and extend to candidates with 3 to 5 years experience after their PhD</li>
-<li>the positions involve working on co-design projects, combining upstream research performed in NumPEx&rsquo;s other target projects, with application development teams (see the call for Application Demonstrators above)</li>
+<li>the positions involve working on co-design projects, combining upstream research performed in NumPEx&rsquo;s other targeted projects, with application development teams (see the call for Application Demonstrators above)</li>
 <li>Contacts: (Mark Asch) <a href="mailto:mark.asch@u-picardie.fr">mark.asch@u-picardie.fr</a>   and (Jean-Pierre Vilotte) <a href="mailto:vilotte@igp.fr">vilotte@igp.fr</a></li>
 </ul>
 </li>
