Update to match 3f04cfc6eeb9d35c40c00757e092b4708416d373

--- a/index.html
+++ b/index.html
@@ -1384,7 +1384,7 @@ Find our <a href='#appel-a-demonstrateurs'>call for demonstrators</a>.
 <p>ExaDIP:</p>
 <ul>
 <li>
-<p>we are seeking 5 candidates for our Compute and Data Team (CDT)</p>
+<p>we are seeking at least 5 candidates for our Compute and Data Team (CDT)</p>
 </li>
 <li>
 <p>the positions are for 2 to 5 years, with remuneration as a function of experience</p>
