--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
           
 
           <li class="nav-item">
-            <a class="nav-link " href="/#projets-cibles" data-target="#projets-cibles"><span>Target projects</span></a>
+            <a class="nav-link " href="/#projets-cibles" data-target="#projets-cibles"><span>Targeted projects</span></a>
           </li>
 
           
